# MicroDrone-Firmware

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  swarmFirmware.py
.github/workflows/: main.yml
FreeRTOS_Kernel/: CMakeLists.txt  subdir.mk
FreeRTOS_Kernel/portable/GCC/Posix/: port.c  portmacro.h
HAL/: comms.h  imu.h  imu_utils.c  imu_utils.h  motors.h  simulatorComms.h  tof.h
HAL/PC/: PC_HAL_CONFIG.h  comms.c  imu.c  motors.c  sim.c  sim.h  simulatorComms.c  simulatorComms.h  tof.c
HAL/PC/SimCommsUpdateTask/: SimCommsUpdateTask.c  SimCommsUpdateTask.h
HAL/PIC/: comms.c  imu.c  motors.c  simulatorComms.c  tof.c
HAL/PIC_HV2/: comms.c  imu.c  motors.c  tof.c
HAL/SIM/: sim.c  sim.h
HAL/SimCommsUpdateTask/: SimCommsUpdateTask.c  SimCommsUpdateTask.h
Matlab/: ProcessIMU.asv  ProcessIMU.m  ProcessIMU.prj  fromTorqueToAngularVels.m  test.m
Matlab/codegen/lib/MatlabLib/: MatlabLib_data.c  MatlabLib_data.h  MatlabLib_initialize.c  MatlabLib_rtw.mk  MatlabLib_terminate.c  MatlabLib_terminate.h  MatlabLib_types.h  ProcessIMU.h  codedescriptor.dmr  defines.txt  fromTorqueToAngularVels.c  fromTorqueToAngularVels.h  rtGetInf.c  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  rt_nonfinite.c  rt_nonfinite.h  rtwtypes.h  svd.c  svd.h  xaxpy.c  xaxpy.h  xdotc.c  xdotc.h  xnrm2.c  xnrm2.h  xrot.c  xrot.h  xrotg.c  xrotg.h  xswap.c  xswap.h
Matlab/codegen/lib/MatlabLib/examples/: main.c  main.h
Matlab/codegen/lib/MatlabLib/html/: report.mldatx
Matlab/codegen/lib/MatlabLib/interface/: _coder_MatlabLib_api.c  _coder_MatlabLib_api.h  _coder_MatlabLib_mex.c  _coder_MatlabLib_mex.h
Matlab/codegen/mex/ProcessIMU_mex/html/: report.mldatx
libs/Math/: Pose3D.h  Quaternion.c  Quaternion.h  Twist3D.h  Vector3D.c  Vector3D.h
src/: CONFIG.h  main.c
src/Control/: AttitudeController.c  AttitudeController.h  ComplementaryFilter.c  ComplementaryFilter.h  PID.c  PID.h  PositionEstimatorAltitude.c  PositionEstimatorAltitude.h  SMCAttitudeController.c  SMCAttitudeController.h  SensFusion.c  SensFusion.h
src/Control/MatlabFunctions/: MatlabLib_data.c  MatlabLib_initialize.c  MatlabLib_initialize.h  MatlabLib_terminate.c  MatlabLib_types.h  ProcessIMU.c  fromTorqueToAngularVels.c  fromTorqueToAngularVels.h  fromTorqueToAngularVels_data.c  fromTorqueToAngularVels_data.h  fromTorqueToAngularVels_initialize.c  fromTorqueToAngularVels_initialize.h  fromTorqueToAngularVels_terminate.c  fromTorqueToAngularVels_terminate.h  fromTorqueToAngularVels_types.h  rtGetInf.c  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  rt_nonfinite.c  rt_nonfinite.h  rtwtypes.h  svd.c  svd.h  xaxpy.c  xaxpy.h  xdotc.c  xdotc.h  xnrm2.c  xnrm2.h  xrot.c  xrot.h  xrotg.c  xswap.c  xswap.h
src/Control/PID/: PID.c
src/Control/SMC/: SMC.c  SMC.h
src/Control/StateSpace/: SixDOFQuadcopterModel.c  SixDOFQuadcopterModel.h
src/DataTypes/: ControlTypes.h  DroneParams.h
src/MAVLink/: MAVLinkHandler.c  MAVLinkHandler.h  MAVLinkSender.c  MAVLinkSender.h
src/Tasks/: HeartbeatTask.c  HeartbeatTask.h  IMUTestTask.c  IMUTestTask.h  IMUUpdateTask.c  IMUUpdateTask.h  MAVStatusTask.c  MAVStatusTask.h  TOFUpdateTask.c  TOFUpdateTask.h
src/Tasks/AttitudeControllerTask/: AttitudeControllerTask.c  AttitudeControllerTask.h
src/Tasks/MAVLink/: MAVLinkRecvTask.c  MAVLinkRecvTask.h  MAVLinkSendTask.c  MAVLinkSendTask.h
src/Tasks/MPCTask/: MPCTask.c  MPCTask.h
src/Tasks/SMCAttitudeControllerTask/: SMCAttitudeControllerTask.c  SMCAttitudeControllerTask.h
src/Utils/: num.c  num.h
tests/: CMakeLists.txt
tests/TestTest/: TestTest.cpp
